Set Automatic login flag to adjust SDDM config directly

Summary:
AccountsService is a bit weird, the automatic login flag adjusts a
config file in /etc/gdm/

This doesn't work for two reasons:
1) SDDM (our Display Manager) obviously doesn't read this file
2) AccountsService doesn't create the folder if it doesn't exist, so we
can't even use if we tried.

This patch adjusts UserManager to write /etc/sddm.conf directly. It's
not ideal, but I think it's the only option we have, certainly in the
short term.

BUG: 363058

Test Plan:
Set automatic login on a user
Restarted KCM, still set
Set it on another user, config changed properly, old user was updated
Unchecked it on my current user, config file was unset properly

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3658